--- a/reviews.html
+++ b/reviews.html
@@ -61,15 +61,24 @@
 <!-- Page Content -->
 <section class="py-5 review-content">
   <div class="container">
-    <h1 class="text-dark">Our Home of Reviews</h1>
-    <p class="lead">Here are our Current car reviews this year , more to follow in the next couple of weeks!</p>
+  
+    <h2 class="text-dark text-center">Our Home of Reviews</h2>
+    <p class="lead text-center">Here are our Current car reviews this year , more to follow in the next couple of weeks!</p>
+   
   </div>
+  <div class="circle-reviews">
+       <a href="#what-we-do"><i class="fas fa-chevron-down"></i></a>
+       
+       </div>
+  
 </section>
 
 
     <main class="container-reviews">
       <section class="card-reviews ">
+         <div class="inner">
         <img class="img-reviews img-responsive " src="./images/m4.jpeg" alt="" />
+        </div>
         <div>
           <h3>Bmw M4</h3>
           <p>
@@ -80,10 +89,17 @@
           </p>
           <a target="_blank" class="btn btn-info" href="https://www.carwow.co.uk/bmw/m4?source=navbarSearch">Read More</a>
         </div>
+        
       </section>
 
+      <div class="text-center">
+      <i class="fas fa-chevron-down"></i>
+      </div>
+
       <section class="card-reviews" data-aos="fade-left">
+      <div class="inner">
         <img class="img-reviews img-responsive" src="./images/h-i30n.jpeg" alt="" />
+        </div>
         <div>
           <h3>Hyundai i30N</h3>
           <p>
@@ -95,8 +111,14 @@
         </div>
       </section>
 
+      <div class="text-center">
+      <i class="fas fa-chevron-down"></i>
+      </div>
+
       <section class="card-reviews" data-aos="fade-right">
+      <div class="inner">
         <img class="img-reviews img-responsive" src="./images/gti7.jpeg" alt="" />
+        </div>
         <div>
           <h3>MK7 Golf Gti</h3>
           <p>
@@ -110,8 +132,14 @@
         </div>
       </section>
 
+      <div class="text-center">
+      <i class="fas fa-chevron-down"></i>
+      </div>
+
       <section class="card-reviews" data-aos="fade-left">
+      <div class="inner">
         <img class="img-reviews" src="./images/supra.jpeg" alt="" />
+        </div>
         <div>
           <h3>Toyota Supra</h3>
           <p>
@@ -124,8 +152,14 @@
         </div>
       </section>
 
+      <div class="text-center">
+      <i class="fas fa-chevron-down"></i>
+      </div>
+
       <section class="card-reviews" data-aos="fade-right">
+         <div class="inner">
         <img class="img-reviews" src="./images/tesla.jpeg" alt="" />
+        </div>
         <div>
           <h3>Tesla Model S</h3>
           <p>
@@ -137,8 +171,14 @@
         </div>
       </section>
 
+      <div class="text-center">
+      <i class="fas fa-chevron-down"></i>
+      </div>
+
       <section class="card-reviews" data-aos="fade-left">
+         <div class="inner">
         <img class="img-reviews" src="./images/gti1.jpeg" alt="" />
+        </div>
         <div>
           <h3>MK5 Golf Gti</h3>
           <p>
@@ -152,8 +192,14 @@
         </div>
       </section>
 
+      <div class="text-center">
+      <i class="fas fa-chevron-down"></i>
+      </div>
+
       <section class="card-reviews" data-aos="fade-right">
+         <div class="inner">
         <img class="img-reviews" src="./images/st.jpeg" alt="" />
+        </div>
         <div>
           <h3>Fiesta ST</h3>
           <p>
@@ -167,8 +213,14 @@ And the introduction of a mechanical limited-slip differential enhances traction
         </div>
       </section>
 
+      <div class="text-center">
+      <i class="fas fa-chevron-down"></i>
+      </div>
+
       <section class="card-reviews" data-aos="fade-left">
+         <div class="inner">
         <img class="img-reviews" src="./images/rs3-blue.jpeg" alt="" />
+        </div>
         <div>
           <h3>Audi RS3</h3>
           <p>
