changing reviews header colour and adding scroll animation

--- a/media.html
+++ b/media.html
@@ -57,8 +57,12 @@
 <!--Closing Nav-->
 <section>
 <div class="container">
- <h1 class="font-weight-light text-dark text-center text-lg-left mt-4 my-4 mb-0">Video</h1>
- <p class="text-dark"> This is Calvin from Calvins car diary, Doing a video on a lovely lapiz blue Golf R.</p>
+<div class="media-content">
+ <h1 class="font-weight-light text-dark text-center  mt-4 my-4 mb-0">MEDIA</h1>
+ </div>
+ <hr>
+ <h2 class="text-center text-dark">Calvins Car Diary</h2>
+ <p class="text-dark text-center"> This is Calvin from Calvins car diary, Doing a video on a lovely lapiz blue Golf R.</p>
 
 <div class="embed-responsive embed-responsive-21by9">
   <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/eAT3YeaN5Yk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -66,6 +70,22 @@
 </div>
 
 </section>
+
+<hr>
+
+<section>
+<div class="container">
+ <h2 class="text-center text-dark">Archie Hamilton</h2>
+ <p class="text-dark text-center"> This is Archie Hamilton from his youtube channel doing a great video on his new AMG A 45.</p>
+
+<div class="embed-responsive embed-responsive-21by9">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/boUKdJC9Voc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+</div>
+
+</section>
+
+<hr>
 
 
 <section class="paragraph-bg">
