--- a/reviews.html
+++ b/reviews.html
@@ -59,15 +59,15 @@
 <!--Closing Nav-->
     
 <!-- Page Content -->
-<section class="py-5 review-content">
+<section class="py-5 mb-3 review-content">
   <div class="container">
   
-    <h2 class="text-dark text-center">Our Home of Reviews</h2>
-    <p class="lead text-center">Here are our Current car reviews this year , more to follow in the next couple of weeks!</p>
+    <h2 class="text-light text-center">Our Home of Reviews</h2>
+    <p class="lead text-center text-light">Here are our Current car reviews this year , more to follow in the next couple of weeks!</p>
    
   </div>
-  <div class="circle-reviews">
-       <a href="#what-we-do"><i class="fas fa-chevron-down"></i></a>
+  <div class="circle-reviews ">
+       <a href="#review-2"><i class="fas fa-chevron-down "></i></a>
        
        </div>
   
@@ -96,7 +96,7 @@
       <i class="fas fa-chevron-down"></i>
       </div>
 
-      <section class="card-reviews" data-aos="fade-left">
+      <section class="card-reviews" id="review-2" data-aos="fade-left">
       <div class="inner">
         <img class="img-reviews img-responsive" src="./images/h-i30n.jpeg" alt="" />
         </div>
