--- a/media.html
+++ b/media.html
@@ -175,11 +175,10 @@
         <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
           <p class="font-italic text-muted text-white">We are are also on updating and posting constantly on social media, follow us!!</p>
           <ul class="list-inline mt-4">
-            <li class="list-inline-item"><a href="#" target="_blank" title="twitter"><i class="fab fa-twitter"></i></a></li>
-            <li class="list-inline-item"><a href="#" target="_blank" title="facebook"><i class="fab fa-facebook"></i></a></li>
-            <li class="list-inline-item"><a href="#" target="_blank" title="instagram"><i class="fab fa-instagram"></i></a></li>
-            <li class="list-inline-item"><a href="#" target="_blank" title="pinterest"><i class="fab fa-pinterest"></i></a></li>
-            <li class="list-inline-item"><a href="#" target="_blank" title="vimeo"><i class="fab fa-vimeo"></i></a></li>
+            <li class="list-inline-item"><a href="https://twitter.com/explore" target="_blank" title="twitter"><i class="fab fa-twitter fa-2x"></i></a></li>
+            <li class="list-inline-item"><a href="https://www.facebook.com/" target="_blank" title="facebook"><i class="fab fa-facebook fa-2x"></i></a></li>
+            <li class="list-inline-item"><a href="https://www.instagram.com/dailydriverss/?hl=en" target="_blank" title="instagram"><i class="fab fa-instagram fa-2x"></i></a></li>
+            
           </ul>
         </div>
         <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
