--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
     <div class="social-body">
       <div class="container-social">
         <div class="icon">
+            
            <div class="iconBx active" data-id="content1">
                <img src="./images/facebooksvg.svg" alt="" >
            </div>
@@ -137,7 +138,7 @@
         </div>
 
         <div class="content-social">
-          <div class="contentBx active" id="content1">
+          <div class="contentBx active" id="content1" >
              <div>
                 <div class="text">
                     <h2 class="text-white">Facebook </h2>
@@ -303,27 +304,27 @@
  </section>
 	<!-- Closing Reviews-->
     <section class="d-none d-lg-block">
-    <div class="ratings-body ">
+    <div class="ratings-body text-center">
            <div class="rating">
               <input type="radio" name="star" class="star1" id="star1" checked="checked">
                 <label for="star1">
                  <i class="fas fa-star fa-2x"></i>
-                 <h4>Loved it!</h4>
+                 <option value="">Love it!</option>
               </label>
               <input type="radio" name="star" id="star2">
                 <label for="star2">
                  <i class="far fa-smile fa-2x"></i>
-                 <h4>Liked it it!</h4>
+                 <option value="">Like it</option>
               </label>
               <input type="radio" name="star" id="star3">
                 <label for="star3">
                  <i class="far fa-meh fa-2x"></i>
-                 <h4>It's ok</h4>
+                 <option value="">Meh</option>
               </label>
               <input type="radio" name="star" id="star4">
                 <label for="star4">
                  <i class="far fa-frown fa-2x"></i>
-                 <h4>Not good</h4>
+                <option value="">Not good</option>
               </label>
               <h2 class="text-ratings">Do You Like this site?</h2>
            </div>
@@ -368,7 +369,7 @@
           <p class="text-muted mb-4 text-white">Enter your email here for a weekly update on new reviews and content!</p>
           <div class="p-1 rounded border">
             <div class="input-group">
-              <input type="email" placeholder="Enter your email address" aria-describedby="button-addon1" class="form-control border-0 shadow-0">
+              <input type="text" name="emailaddress" class="form-control" id="emailaddress" placeholder="Email" required/>
               <div class="input-group-append">
                 <button id="button-addon1" type="submit" class="btn btn-link"><i class="fa fa-paper-plane"></i></button>
               </div>
