validating code changes

--- a/media.html
+++ b/media.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title></title>
+    <title>Dailydriverss</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -19,9 +19,7 @@
 
 	<link rel="stylesheet" href="./css/styles.css">
 
-</head>
 
-<body data-spy="scroll" data-target="#navbarSupportedContent">
 
 </head>
 <body>
@@ -65,7 +63,7 @@
  <p class="text-dark text-center"> This is Calvin from Calvins car diary, Doing a video on a lovely lapiz blue Golf R.</p>
 
 <div class="embed-responsive embed-responsive-21by9">
-  <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/eAT3YeaN5Yk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/eAT3YeaN5Yk"  allowfullscreen></iframe>
 </div>
 </div>
 
@@ -79,7 +77,7 @@
  <p class="text-dark text-center"> This is Archie Hamilton from his youtube channel doing a great video on his new AMG A 45.</p>
 
 <div class="embed-responsive embed-responsive-21by9">
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/boUKdJC9Voc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/boUKdJC9Voc"   allowfullscreen></iframe>
 </div>
 </div>
 
