--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title></title>
+    <title>DailyDriverss</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -21,9 +21,7 @@
 
 </head>
 
-<body data-spy="scroll" data-target="#navbarSupportedContent">
 
-</head>
 <body>
 <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
@@ -77,7 +75,7 @@
   <div class="container">
     
     <h2 class="text-dark text-center">WELCOME TO DAILY DRIVERS</h2>
-    <strong><p class="text-dark"> 
+     <p class="text-dark"> 
     My name is Liam and I set up DailyDriverss.com in 2020 to provide consumers and car enthusiasts with a friendly, 
     fun and honest viewpoint on cars and the motor industry. I have been reviewing new cars and writing about the industry for the past 3 years.</p>
     <p class="text-dark ">I’ve always been in love with the automobile. I was the kid who knew every car brand and model. 
@@ -93,7 +91,7 @@
       <p class="text-dark ">I know my ABS from my ESP and I know a good car from a bad car. The best car I ever tested was the Ford Focus RS.</p>
       <p class="text-dark ">The worst car? That’s another story…
 
-I hope you enjoy this site and please follow me on social media so you never miss an update!</p></strong>
+I hope you enjoy this site and please follow me on social media so you never miss an update!</p>
   </div>
   
 </section>
