making images smaller for media page

--- a/media.html
+++ b/media.html
@@ -98,62 +98,62 @@
 
     <div class="col-lg-3 col-md-4 col-6 ">
       <a  class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="./images/porshce.jpeg" alt="">
+            <img class="img-fluid img-thumbnail" src="./images/greymustang.jpg" alt="">
           </a>
     </div>
     <div class="col-lg-3 col-md-4 col-6">
       <a  class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="./images/r8.jpeg" alt="">
+            <img class="img-fluid img-thumbnail" src="./images/cars.jpg" alt="">
           </a>
     </div>
     <div class="col-lg-3 col-md-4 col-6">
       <a  class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="./images/911.jpeg" alt="">
+            <img class="img-fluid img-thumbnail" src="./images/posrshe.jpg" alt="">
           </a>
     </div>
     <div class="col-lg-3 col-md-4 col-6">
       <a  class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="./images/mini.jpeg" alt="">
+            <img class="img-fluid img-thumbnail" src="./images/chevy.jpg" alt="">
           </a>
     </div>
     <div class="col-lg-3 col-md-4 col-6">
       <a  class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="./images/nissan.jpeg" alt="">
+            <img class="img-fluid img-thumbnail" src="./images/amg2.jpg" alt="">
           </a>
     </div>
     <div class="col-lg-3 col-md-4 col-6">
       <a  class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="./images/m4.jpeg" alt="">
+            <img class="img-fluid img-thumbnail" src="./images/bmw.jpg" alt="">
           </a>
     </div>
     <div class="col-lg-3 col-md-4 col-6">
       <a  class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="./images/amg1.jpeg" alt="">
+            <img class="img-fluid img-thumbnail" src="./images/aston.jpg" alt="">
           </a>
     </div>
     <div class="col-lg-3 col-md-4 col-6">
       <a  class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="./images/gti1.jpeg" alt="">
+            <img class="img-fluid img-thumbnail" src="./images/tesla1.jpg" alt="">
           </a>
     </div>
     <div class="col-lg-3 col-md-4 col-6">
       <a  class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="./images/supra.jpeg" alt="">
+            <img class="img-fluid img-thumbnail" src="./images/laferarri.jpg" alt="">
           </a>
     </div>
     <div class="col-lg-3 col-md-4 col-6">
       <a  class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="./images/mustang-1.jpeg" alt="">
+            <img class="img-fluid img-thumbnail" src="./images/merc-wheel.jpg" alt="">
           </a>
     </div>
     <div class="col-lg-3 col-md-4 col-6">
       <a  class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="./images/tesla.jpeg" alt="">
+            <img class="img-fluid img-thumbnail" src="./images/defender2.jpg" alt="">
           </a>
     </div>
     <div class="col-lg-3 col-md-4 col-6">
       <a  class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="./images/wheel.jpeg" alt="">
+            <img class="img-fluid img-thumbnail" src="./images/audi.jpg" alt="">
           </a>
     </div>
   </div>
