--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
  <body>
 
 	<!-- Navigation -->
-	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
 		<div class="container">
 			<a class="navbar-brand js-scroll-trigger" href="index.html">Dailydriverss</a>
 			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
