--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
  <header>
   <div class="overlay"></div>
   <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-    <source src="./video/video.mp4" type="video/mp4">
+    <source src="./video/audirs3.MOV" type="video/mp4">
   </video>
   <div class="container h-100">
     <div class="d-flex h-100 text-center align-items-center">
@@ -77,21 +77,8 @@
     <h2 class="text-dark text-center">WELCOME TO DAILY DRIVERS</h2>
      <p class="text-dark"> 
     My name is Liam and I set up DailyDriverss.com in 2020 to provide consumers and car enthusiasts with a friendly, 
-    fun and honest viewpoint on cars and the motor industry. I have been reviewing new cars and writing about the industry for the past 3 years.</p>
-    <p class="text-dark ">I’ve always been in love with the automobile. I was the kid who knew every car brand and model. 
-    But I never grew up wanting to be a motoring journalist. For sure I read all the magazines but I never thought that motoring writing was a career open to me.</p>
-    <p class="text-dark ">Now I’m proud to be a freelance motoring journalist and car blogger, also dabbling in some automotive photography and video presenting. 
-    I’m the founder and editor of one of Ireland’s best car blogs. 
-    I’ve driven more cars than I can remember (triple digits now). I’ve written hundreds of car reviews, features and news stories.
-     I’ve been published in some leading Irish newspapers and on influential international websites.</p>
-     <p class="text-dark "> 
-     I’ve travelled to the UK, France, Netherlands, Spain, Portugal, Italy, Croatia and Greece to test drive cars.
-      I’ve made more than a handful of car videos. I’ve built up a loyal following of car 
-      fans across Twitter, Facebook, YouTube and Instagram.</p>
-      <p class="text-dark ">I know my ABS from my ESP and I know a good car from a bad car. The best car I ever tested was the Ford Focus RS.</p>
-      <p class="text-dark ">The worst car? That’s another story…
-
-I hope you enjoy this site and please follow me on social media so you never miss an update!</p>
+    fun and honest viewpoint on cars and the motor industry. I have been taking photos of cars and the past couple years. I have a passion for cars. Im sure everyone viewing this page will have that in common with me!</p>
+ 
   </div>
   
 </section>
