--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-	<title>DailyDriverss</title>
+	<title>DailyDrivers</title>
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -28,9 +28,9 @@
 	<!-- Navigation -->
 <body id="page-top">
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
     <div class="container section-1">
-      <a class="navbar-brand js-scroll-trigger" href="index.html">Dailydriverss</a>
+      <a class="navbar-brand js-scroll-trigger" href="index.html">Dailydrivers</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -75,15 +75,15 @@
 	<!--Features -->
 	<section id="what-we-do" >
 		<div class="container-fluid ">
-			<h2 class="section-title mb-2 h1 text-dark">What we do</h2>
-			<p class="text-center text-muted h5">Reviews of the best daily drivers in the market.</p>
+			<h2 class="section-title mb-2 h1 text-dark">What we do?</h2>
+			<p class="text-center text-muted h5">I take automotive photos around the Cork area.</p>
 			<div class="row mt-5">
 				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
 					<div class="card">
 						<div class="card-block block-1">
-							<h3 class="card-title text-dark">New Content Everyday</h3>
+							<h3 class="card-title text-dark">New Content Everyweek</h3>
 							<p class="card-text">
-								Follow us on all social media platforms @Dailydriverss.
+								Follow me on all social media platforms @daily_drivers1
 							</p>
 
 						</div>
@@ -92,8 +92,8 @@
 				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
 					<div class="card">
 						<div class="card-block block-2">
-							<h3 class="card-title text-dark">Ideas For Future cars</h3>
-							<p class="card-text">Suppling you with everything cars, reviews and Media!
+							<h3 class="card-title text-dark">Top Quality photo's</h3>
+							<p class="card-text">Suppling you with everything cars, News and Media!
 							</p>
 
 						</div>
@@ -104,7 +104,7 @@
 						<div class="card-block block-3">
 							<h3 class="card-title text-dark">Listen to our audience</h3>
 							<p class="card-text">
-								Send us your questions!
+								Send me your own Car's pictures!
 							</p>
 
 						</div>
@@ -187,9 +187,9 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-dark mt-0">Cars from all around the world</h2>
+                        <h2 class="text-dark mt-0">We have Pic's of Cars from all around the world</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-dark mb-4">Here is a map showing where our reviewed cars are built.</p>
+                        <p class="text-dark mb-4">Here is a map showing where our photo'd cars are built.</p>
                         
                     </div>
                 </div>
@@ -207,8 +207,7 @@
 	<div class="container ">
 
   
-       <h1 class="my-4">Reviews -
-         <small>Our Top Dailys</small>
+       <h1 class="my-4">Our Top Dailys
       </h1>
 
       <div class="row shadow">
