--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-dark mt-0">We have Pic's of Cars from all around the world</h2>
+                        <h2 class="text-dark mt-0">I take pictures of Cars that are manufactured all around the world</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-dark mb-4">Here is a map showing where our photo'd cars are built.</p>
+                        <p class="text-dark mb-4">Here is a map showing where the cars are built.</p>
                         
                     </div>
                 </div>
@@ -207,7 +207,7 @@
 	<div class="container ">
 
   
-       <h1 class="my-4">Our Top Dailys
+       <h1 class="my-4">My Top Dailys
       </h1>
 
       <div class="row shadow">
