changes to text on the home page

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 	<!--Features -->
 	<section id="what-we-do" >
 		<div class="container-fluid ">
-			<h2 class="section-title mb-2 h1 text-dark">What we do?</h2>
-			<p class="text-center text-muted h5">I take automotive photos around the Cork area.</p>
+            <h2 class="section-title mb-2 h1 text-dark">Who are we?</h2>
+			<p class="text-center text-muted h5">We take automotive photos around the Cork area.</p>
 			<div class="row mt-5">
 				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-4">
 					<div class="card">
